Fix pager links alignment.

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -160,6 +160,10 @@ ul.primary-tabs.links {
   }
 }
 
+ul.links.pager {
+  float: left;
+}
+
 #mini-panel-header {
   display: flex;
 
